// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<progress> demo: > render [basic] correctly 1`] = `
<div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-normal sd:w-[50%]">
  <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
    <div class="sd-progress-line" style="width: 100%; height: 4px;">
      <div class="sd-progress-line-bar-buffer"></div>
      <div class="sd-progress-line-bar" style="width: 20%;"></div>
    </div>
    <div class="sd-progress-line-text">20%
      <!--v-if-->
    </div>
  </div>
</div>
<br>
<br>
<div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-normal sd:w-[50%]">
  <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.3" class="sd-progress-line-wrapper">
    <div class="sd-progress-line" style="width: 100%; height: 4px;">
      <div class="sd-progress-line-bar-buffer"></div>
      <div class="sd-progress-line-bar" style="width: 30%;"></div>
    </div>
    <div class="sd-progress-line-text"> 进度 30% </div>
  </div>
</div>
`;

exports[`<progress> demo: > render [circle] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-normal">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
        </svg>
        <div class="sd-progress-circle-text">20%</div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-warning">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
        </svg>
        <div class="sd-progress-circle-text">20%</div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-danger">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
        </svg>
        <div class="sd-progress-circle-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M23 9h2v21h-2z"></path>
            <path fill="currentColor" stroke="none" d="M23 9h2v21h-2z"></path>
            <path d="M23 37h2v2h-2z"></path>
            <path fill="currentColor" stroke="none" d="M23 37h2v2h-2z"></path>
          </svg></div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-success">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
        </svg>
        <div class="sd-progress-circle-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
          </svg></div>
      </div>
    </div>
  </div>
</div>
<div class="sd:mt-5">
  <div class="sd-slider sd:w-37.5">
    <div class="sd-slider-track">
      <div class="sd-slider-bar" style="left: 0%; right: 80%;"></div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div style="left: 20%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="1" aria-valuemin="0" aria-valuenow="0.2" aria-valuetext="0.2" class="sd-slider-btn"></div>
      <!---->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`<progress> demo: > render [linear] correctly 1`] = `
<div>
  <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-normal sd:w-[50%]">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.8" class="sd-progress-line-wrapper">
      <div class="sd-progress-line" style="width: 100%; height: 4px;">
        <div class="sd-progress-line-bar-buffer"></div>
        <div class="sd-progress-line-bar" style="width: 80%; background-image: linear-gradient(to right, rgb(var(--primary-6)) 0%,rgb(var(--success-6)) 100%);"></div>
      </div>
      <div class="sd-progress-line-text">80%
        <!--v-if-->
      </div>
    </div>
  </div><br><br>
  <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-success sd:w-[50%]">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="1" class="sd-progress-line-wrapper">
      <div class="sd-progress-line" style="width: 100%; height: 4px;">
        <div class="sd-progress-line-bar-buffer"></div>
        <div class="sd-progress-line-bar" style="width: 100%; background-image: linear-gradient(to right, rgb(var(--primary-6)) 0%,rgb(var(--success-6)) 100%);"></div>
      </div>
      <div class="sd-progress-line-text">100%
        <!--v-if-->
      </div>
    </div>
  </div><br><br>
  <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
    <!---->
    <div class="sd-space-item">
      <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-normal sd:w-[50%]">
        <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.8" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
            <defs>
              <linearGradient id="sd-progress-circle-linear-gradient-1" x1="0" y1="1" x2="0" y2="0">
                <stop offset="0%" stop-color="rgb(var(--primary-6))"></stop>
                <stop offset="100%" stop-color="rgb(var(--success-6))"></stop>
              </linearGradient>
            </defs>
            <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
            <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke: url(&quot;#sd-progress-circle-linear-gradient-1&quot;); stroke-dasharray: 188.49555921538757; stroke-dashoffset: 37.6991118430775;"></circle>
          </svg>
          <div class="sd-progress-circle-text">80%</div>
        </div>
      </div>
    </div>
    <!---->
    <div class="sd-space-item">
      <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-success sd:w-[50%]">
        <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="1" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
            <defs>
              <linearGradient id="sd-progress-circle-linear-gradient-2" x1="0" y1="1" x2="0" y2="0">
                <stop offset="0%" stop-color="rgb(var(--primary-6))"></stop>
                <stop offset="100%" stop-color="rgb(var(--success-6))"></stop>
              </linearGradient>
            </defs>
            <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
            <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke: url(&quot;#sd-progress-circle-linear-gradient-2&quot;); stroke-dasharray: 188.49555921538757; stroke-dashoffset: 0;"></circle>
          </svg>
          <div class="sd-progress-circle-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
            </svg></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<progress> demo: > render [mini] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center sd:w-full" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-mini sd-progress-status-normal">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="6" stroke-width="4"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="6" stroke-width="4" style="stroke-dasharray: 37.69911184307752; stroke-dashoffset: 30.159289474462014;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-mini sd-progress-status-warning">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="6" stroke-width="4"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="6" stroke-width="4" style="stroke-dasharray: 37.69911184307752; stroke-dashoffset: 30.159289474462014;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-mini sd-progress-status-danger">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="6" stroke-width="4"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="6" stroke-width="4" style="stroke-dasharray: 37.69911184307752; stroke-dashoffset: 30.159289474462014;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-mini sd-progress-status-success">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="6" stroke-width="4"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="6" stroke-width="4" style="stroke-dasharray: 37.69911184307752; stroke-dashoffset: 30.159289474462014;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
<div class="sd-space sd-space-horizontal sd-space-align-center sd:w-full sd:mt-5" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-mini sd-progress-status-normal">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="4" stroke-width="8"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="4" stroke-width="8" style="stroke-dasharray: 25.132741228718345; stroke-dashoffset: 20.106192982974676;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-mini sd-progress-status-warning">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="4" stroke-width="8"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="4" stroke-width="8" style="stroke-dasharray: 25.132741228718345; stroke-dashoffset: 20.106192982974676;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-mini sd-progress-status-danger">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg viewBox="0 0 16 16" class="sd-progress-circle-svg">
          <!--v-if-->
          <circle class="sd-progress-circle-bg" fill="none" cx="8" cy="8" r="4" stroke-width="8"></circle>
          <circle class="sd-progress-circle-bar" fill="none" cx="8" cy="8" r="4" stroke-width="8" style="stroke-dasharray: 25.132741228718345; stroke-dashoffset: 20.106192982974676;"></circle>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-circle sd-progress-size-mini sd-progress-status-success">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 16px; height: 16px;"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-check" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path d="M41.678 11.05 19.05 33.678 6.322 20.95"></path>
        </svg>
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
<div class="sd:mt-5">
  <div class="sd-slider sd:w-37.5">
    <div class="sd-slider-track">
      <div class="sd-slider-bar" style="left: 0%; right: 80%;"></div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div style="left: 20%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="1" aria-valuemin="0" aria-valuenow="0.2" aria-valuetext="0.2" class="sd-slider-btn"></div>
      <!---->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`<progress> demo: > render [size] correctly 1`] = `
<div class="sd-space sd-space-vertical sd:w-[50%]" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item"><span class="sd-radio-group-button sd-radio-group-size-medium sd-radio-group-direction-horizontal"><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="small"><span class="sd-radio-button-content">Small</span></label><label class="sd-radio-button sd-radio-checked"><input type="radio" checked="" class="sd-radio-target" value="medium"><span class="sd-radio-button-content">Medium</span></label><label class="sd-radio-button"><input type="radio" class="sd-radio-target" value="large"><span class="sd-radio-button-content">Large</span></label></span></div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-normal">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
        <div class="sd-progress-line" style="width: 100%; height: 4px;">
          <div class="sd-progress-line-bar-buffer"></div>
          <div class="sd-progress-line-bar" style="width: 20%;"></div>
        </div>
        <div class="sd-progress-line-text">20%
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-warning">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
        <div class="sd-progress-line" style="width: 100%; height: 4px;">
          <div class="sd-progress-line-bar-buffer"></div>
          <div class="sd-progress-line-bar" style="width: 20%;"></div>
        </div>
        <div class="sd-progress-line-text">20%
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-danger">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
        <div class="sd-progress-line" style="width: 100%; height: 4px;">
          <div class="sd-progress-line-bar-buffer"></div>
          <div class="sd-progress-line-bar" style="width: 20%;"></div>
        </div>
        <div class="sd-progress-line-text">20% <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
          </svg></div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
      <!---->
      <div class="sd-space-item">
        <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-normal">
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
              <!--v-if-->
              <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
              <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
            </svg>
            <div class="sd-progress-circle-text">20%</div>
          </div>
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-warning">
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
              <!--v-if-->
              <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
              <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
            </svg>
            <div class="sd-progress-circle-text">20%</div>
          </div>
        </div>
      </div>
      <!---->
      <div class="sd-space-item">
        <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-danger">
          <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
              <!--v-if-->
              <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2"></circle>
              <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 150.79644737231007;"></circle>
            </svg>
            <div class="sd-progress-circle-text"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
                <path d="M23 9h2v21h-2z"></path>
                <path fill="currentColor" stroke="none" d="M23 9h2v21h-2z"></path>
                <path d="M23 37h2v2h-2z"></path>
                <path fill="currentColor" stroke="none" d="M23 37h2v2h-2z"></path>
              </svg></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<progress> demo: > render [status] correctly 1`] = `
<div class="sd-space sd-space-vertical sd:w-[50%]" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-normal">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
        <div class="sd-progress-line" style="width: 100%; height: 4px;">
          <div class="sd-progress-line-bar-buffer"></div>
          <div class="sd-progress-line-bar" style="width: 20%;"></div>
        </div>
        <div class="sd-progress-line-text">20%
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-warning">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
        <div class="sd-progress-line" style="width: 100%; height: 4px;">
          <div class="sd-progress-line-bar-buffer"></div>
          <div class="sd-progress-line-bar" style="width: 20%;"></div>
        </div>
        <div class="sd-progress-line-text">20%
          <!--v-if-->
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-danger">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.2" class="sd-progress-line-wrapper">
        <div class="sd-progress-line" style="width: 100%; height: 4px;">
          <div class="sd-progress-line-bar-buffer"></div>
          <div class="sd-progress-line-bar" style="width: 20%;"></div>
        </div>
        <div class="sd-progress-line-text">20% <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-exclamation-circle-fill" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
            <path fill="currentColor" fill-rule="evenodd" stroke="none" d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20m-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z" clip-rule="evenodd"></path>
          </svg></div>
      </div>
    </div>
  </div>
</div>
<div class="sd:mt-5">
  <div class="sd-slider sd:w-37.5">
    <div class="sd-slider-track">
      <div class="sd-slider-bar" style="left: 0%; right: 80%;"></div>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
      <div style="left: 20%;" tabindex="0" role="slider" aria-disabled="false" aria-valuemax="1" aria-valuemin="0" aria-valuenow="0.2" aria-valuetext="0.2" class="sd-slider-btn"></div>
      <!---->
    </div>
    <!--v-if-->
  </div>
</div>
`;

exports[`<progress> demo: > render [steps] correctly 1`] = `
<div class="sd:w-[50%]">
  <div class="sd-progress sd-progress-type-steps sd-progress-size-medium sd-progress-status-normal">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.3" class="sd-progress-steps-wrapper">
      <div class="sd-progress-steps" style="height: 4px;">
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item"></div>
        <div class="sd-progress-steps-item"></div>
      </div>
      <div class="sd-progress-steps-text">30%
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="sd-progress sd-progress-type-steps sd-progress-size-medium sd-progress-status-warning">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="1" class="sd-progress-steps-wrapper">
      <div class="sd-progress-steps" style="height: 4px;">
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
      </div>
      <div class="sd-progress-steps-text">100%
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="sd-progress sd-progress-type-steps sd-progress-size-small sd-progress-status-normal">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.3" class="sd-progress-steps-wrapper">
      <div class="sd-progress-steps" style="height: 8px;">
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item"></div>
        <div class="sd-progress-steps-item"></div>
      </div>
      <div class="sd-progress-steps-text">30%
        <!--v-if-->
      </div>
    </div>
  </div>
</div>
`;

exports[`<progress> demo: > render [trackcolor] correctly 1`] = `
<div class="sd:w-[50%]">
  <div class="sd-progress sd-progress-type-line sd-progress-size-medium sd-progress-status-normal sd:mb-5">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.4" class="sd-progress-line-wrapper">
      <div class="sd-progress-line" style="width: 100%; height: 4px; background-color: var(--color-primary-light-1);">
        <div class="sd-progress-line-bar-buffer"></div>
        <div class="sd-progress-line-bar" style="width: 40%;"></div>
      </div>
      <div class="sd-progress-line-text">40%
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="sd-progress sd-progress-type-steps sd-progress-size-medium sd-progress-status-normal sd:mb-5">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.4" class="sd-progress-steps-wrapper">
      <div class="sd-progress-steps" style="height: 4px;">
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item sd-progress-steps-item-active"></div>
        <div class="sd-progress-steps-item" style="background-color: var(--color-primary-light-1);"></div>
        <div class="sd-progress-steps-item" style="background-color: var(--color-primary-light-1);"></div>
      </div>
      <div class="sd-progress-steps-text">40%
        <!--v-if-->
      </div>
    </div>
  </div>
  <div class="sd-progress sd-progress-type-circle sd-progress-size-medium sd-progress-status-normal sd:mb-5">
    <div role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0.4" class="sd-progress-circle-wrapper" style="width: 64px; height: 64px;"><svg viewBox="0 0 64 64" class="sd-progress-circle-svg">
        <!--v-if-->
        <circle class="sd-progress-circle-bg" fill="none" cx="32" cy="32" r="30" stroke-width="2" style="stroke: var(--color-primary-light-1);"></circle>
        <circle class="sd-progress-circle-bar" fill="none" cx="32" cy="32" r="30" stroke-width="4" style="stroke-dasharray: 188.49555921538757; stroke-dashoffset: 113.09733552923254;"></circle>
      </svg>
      <div class="sd-progress-circle-text">40%</div>
    </div>
  </div>
</div>
`;
